--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "valvoline",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery-validation": "^1.18.0"
+  }
 }
