--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "valvoline",
   "private": true,
   "dependencies": {
+    "activestorage": "^5.2.1",
     "jquery-validation": "^1.18.0"
   }
 }
